Quartz sync: Oct 9, 2024, 9:59 AM

--- a/content/Journal/1. Είσοδος στη Skyrock --- 10-10-1.md
+++ b/content/Journal/1. Είσοδος στη Skyrock --- 10-10-1.md
@@ -30,7 +30,7 @@ Game world => 10/10/1 - Real World => 15/09/24
 
 ## Άβολος διάλογος με τους ντόπιους και το περιδέραιο
 
-Οι υπόλοιποι της ομάδας συνέχισαν την αμήχανη συζήτηση με τους πολίτες. Ο Μάγος Μπαλέριον παρατήρησε έναν από αυτούς να αγγίζει διακριτικά ένα περιδέραιο, το οποίο αποτελούνταν από πλεγμένα κλαδιά και ένα νύχι κορακιού. Ο μάγος πιστεύει πως το χρησιμοποιεί για προστασία από δαιμονικές επιρροές (possession).
+Οι υπόλοιποι της ομάδας συνέχισαν την αμήχανη συζήτηση με τους πολίτες. Ο Μάγος Μπέλουραθ παρατήρησε έναν από αυτούς να αγγίζει διακριτικά ένα περιδέραιο, το οποίο αποτελούνταν από πλεγμένα κλαδιά και ένα νύχι κορακιού. Ο μάγος πιστεύει πως το χρησιμοποιεί για προστασία από δαιμονικές επιρροές (possession).
 
   
 
