--- a/content/Journal/2. Πριν τον γάμο της Κιβέρα --- 11-10-1.md
+++ b/content/Journal/2. Πριν τον γάμο της Κιβέρα --- 11-10-1.md
@@ -52,7 +52,7 @@
 
 Ο Μπλόσομ ζητά να πάρει τα πράγματα της φίλης του από το γραφείο της, αλλά δεν τον αφήνουν. Ο δεύτερος φρουρός (Orin), που μένει στην είσοδο όταν ο πρώτος πήγε να φέρει τα αντικείμενα της Αϊλίν, λέει πως θα ψάξει καλύτερα για χρήσιμα πράγματα και θα συναντήσει αύριο το βράδυ τον Μπλόσομ στο Καζάνι.
 
-Ύστερα περνούν από την κόρη του μυλωνά, η οποία δεν θυμάται/θυμάται να έχει παιδί και να είναι έγκυος. Φαίνεται μπερδεμένη. Ψάχνοντας το δωμάτιό της, βρίσκουν γαλάζιο άνθος, το Δάκρυ της Σελούν, το οποίο ο Μπέλαραθ αργότερα αναγνωρίζει πως προστατεύει από κατοχές.
+Ύστερα περνούν από την κόρη του μυλωνά, η οποία δεν θυμάται/θυμάται να έχει παιδί και να είναι έγκυος. Φαίνεται μπερδεμένη. Ψάχνοντας το δωμάτιό της, βρίσκουν γαλάζιο άνθος, το Δάκρυ της Σελούν, το οποίο ο Μπέλουραθ αργότερα αναγνωρίζει πως προστατεύει από κατοχές.
 
 Επίσης, υπάρχουν ρούχα ματωμένα στο ύψος της κοιλιάς.
 
