Quartz sync: Oct 9, 2024, 9:49 PM

--- a/content/Journal/2. Πριν τον γάμο της Κιβέρα --- 11-10-1.md
+++ b/content/Journal/2. Πριν τον γάμο της Κιβέρα --- 11-10-1.md
@@ -1,3 +1,4 @@
+Game world => 11/10/1 - Real World =>24/09/24
 ### Όνειρο
 
 > Βυθίζεσαι σε ένα σκοτεινό όνειρο. Έρεβος πρωτόγονο καλύπτει τις απεγνωσμένες φωνές σου, ενώ ψίθυροι σφραγίζουν την καρδιά σου με φόβο. Μια ανατριχιαστική μορφή υψώνεται μπροστά σου. Μάτια που λάμπουν σαν κάρβουνα υπόσχονται τρόμο και τρέλα, κάνοντάς σε να παγώσεις.
