--- a/content/NPCs/Μπρένεκ Μπάιν (Αρραβωνιαστικός).md
+++ b/content/NPCs/Μπρένεκ Μπάιν (Αρραβωνιαστικός).md
@@ -1,1 +1,1 @@
-Ο πλούσιο έμπορος και μέλλων γαμπρός της [[Κιβέρα Ντάρε (Λαίδη)]]
+Ο πλούσιος έμπορος και μέλλων γαμπρός της [[Κιβέρα Ντάρε (Λαίδη)]]
