Quartz sync: Oct 12, 2024, 11:14 PM

--- a/content/Journal/3. Ο Γάμος της Κιβέρα --- 11-10-1491.md
+++ b/content/Journal/3. Ο Γάμος της Κιβέρα --- 11-10-1491.md
@@ -59,7 +59,7 @@
 
 ### Γνωρίζοντας τη Λαίδη
 
-Η Λαίδη Κιβέρα ευχαρίστησε τυπικά την ομάδα και τους έδωσε 10 χρυσά. Συζήτησε με τον Λούσιαν και την Aranict για τα κοσμήματα, στα οποία έχει αδυναμία, και κανόνισε να τους δεχτεί στην έπαυλή της αύριο στις 19:00.
+Η Λαίδη Κιβέρα ευχαρίστησε τυπικά την ομάδα και τους έδωσε 10 χρυσά. Συζήτησε με τον Λούσιαν και την Aranict για τα κοσμήματα, στα οποία έχει αδυναμία, και κανόνισε να τους δεχτεί στην έπαυλή της αύριο στις 19:00. Ενδιαφέρουσα ήταν η αντίδαρασή της όσον αφορά τη μαγεία. Πάγωσε από το φόβο της.
 
 ## Στο φρουραρχείο
 
