Quartz sync: Oct 12, 2024, 11:34 PM

--- a/content/Journal/3. Ο Γάμος της Κιβέρα --- 11-10-1491.md
+++ b/content/Journal/3. Ο Γάμος της Κιβέρα --- 11-10-1491.md
@@ -33,7 +33,7 @@
 
 Ο Λούσιαν επισκέφθηκε την ταβέρνα "Η Σκούπα", όπου βρήκε τους Tieflings και έμαθε ότι το "κόλπο" θα γίνει αύριο το βράδυ, στις 12/11.
 
-Ο Μπάρκιλ πληροφορεί την ομάδα πως το απέθαντο πλάσμα στο ναό του Λαθάντερ είναι ευαίσθητο σε ασημένια όπλα, ευλογημένο νερό και το φως του ήλιου.
+Ο Μπάριλ πληροφορεί την ομάδα πως το απέθαντο πλάσμα στο ναό του Λαθάντερ είναι ευαίσθητο σε ασημένια όπλα, ευλογημένο νερό και το φως του ήλιου.
 
 ## Ο γάμος της Κιβέρα και του Μπρένεκ
 
