Quartz sync: Oct 13, 2024, 12:38 PM

--- a/content/Journal/3. Ο Γάμος της Κιβέρα --- 11-10-1491.md
+++ b/content/Journal/3. Ο Γάμος της Κιβέρα --- 11-10-1491.md
@@ -79,7 +79,11 @@
 
 Η οικογένεια Ντάρε δεν υπάρχει ως οίκος, και η ομάδα συμφωνεί σε αυτό.
 
-Η ομάδα είχε 225 χρυσά. Αγόρασαν 3 healing potions, 
+Η ομάδα είχε 225 χρυσά. Αγόρασαν 
+-120 => 3 healing potions
+5 => Μπέλουραθ (Μαγικός διαγωνισμός)
+10 => Κιβέρα
+ΣΥΝΟΛΟ: 120
 
 ## Η επόμενη ημέρα
 Ξημερώνει 12 Marpenoth 1491
