Quartz sync: Oct 14, 2024, 8:46 AM

--- a/content/Journal/3. Ο Γάμος της Κιβέρα --- 11-10-1491.md
+++ b/content/Journal/3. Ο Γάμος της Κιβέρα --- 11-10-1491.md
@@ -1,4 +1,5 @@
- 11 Marpenoth 1491, Μεσημέρι
+*Game world => 11 Marpenoth (October) 1491, Μεσημέρι*  
+*Real World => 11/10/24*
 
 ## Στην καμινάδα
 
