--- a/content/Journal/1. Είσοδος στη Skyrock --- 10-10-1491.md
+++ b/content/Journal/1. Είσοδος στη Skyrock --- 10-10-1491.md
@@ -1,4 +1,5 @@
-Game world => 10/10/1 - Real World => 15/09/24
+*Game world => 10/10/1491*   
+*Real World => 15/09/24*
 
 ## Απογευματινό ταξίδι στην Skyrock
 
